# pyChing

./: #smgHtmlView.py#  .gitignore  ACTION_PLAN.md  AIR_METHOD_IMPLEMENTATION_SUMMARY.md  AIR_METHOD_SETUP.md  ANALYSIS_README.md  BUGS  BUG_REPORT.md  CHANGELOG.md  COVERAGE_SUMMARY.txt  CREDITS  DESIGN_MULTI_SOURCE_CASTING.md  EARTH_METHOD_GUIDE.md  GUI_MODERNIZATION_SUMMARY.md  MIGRATION_NOTES.md  NEWS  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_PLAN.md  PHASE5_SUMMARY.md  PHASE6_PLAN.md  PHASE6_SUMMARY.md  PR-INSTRUCTIONS.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  REMAINING_WORK.md  TEST_COVERAGE_ANALYSIS.md  THEME_COMPLETION_SESSION.md  TODO.md  check_sizing.py  claude.md  claude_report.md  extract_hexagrams.py  gui_windows.py  icon.xbm  previous_session.md  project_notes.txt  pyching.1  (+33 more)
data/: README.md  __init__.py  examples.py  hexagram_lookup.py  hexagram_svg.py  hexagrams.json  mappings.json  sources_metadata.json
docs/: ABOUT.md  CHANGES  CONVENTIONS.md  COPYRIGHT  EXTRACTOR_FRAMEWORK_SUMMARY.md  INSTALL  MULTI_SOURCE_SYSTEM.md  README  README.md  fix-typos-hexagram-38-47.patch
examples/: demo_complete_integration.py
pyching/: __init__.py
tests/: __init__.py  test_app_configuration.py  test_casting_methods.py  test_cli.py  test_config_directory.py  test_console_interface.py  test_core_engine.py  test_core_hexagram.py  test_core_reading.py  test_data_integrity.py  test_data_loader.py  test_data_resolver.py  test_engine_paths.py  test_error_handling.py  test_gui_imports.py  test_hexagram_data.py  test_hexagram_inversion_fix.py  test_hexagram_lookup.py  test_html_conversion.py  test_invalid_inputs.py  test_oracle_coin_method.py  test_python3_compatibility.py  test_reading_persistence.py
tools/: convert_legacy_data.py  extract_source.py  extract_wilhelm.py  extract_wilhelm_from_md.py  fix_yaml_backslashes.py  migrate_json_to_yaml.py  test_data_loading.py  validate_data.py  verify_wilhelm_extraction.py
(+218 files in other folders)
